--- a/lab1/part2/Makefile.common
+++ b/lab1/part2/Makefile.common
@@ -65,7 +65,7 @@ THREAD_C =../threads/main.cc\
 	../machine/interrupt.cc\
 	../machine/sysdep.cc\
 	../machine/stats.cc\
-	../machine/timer.cc
+	../machine/timer.cc\
 
 THREAD_S = ../threads/switch.s
 
